Update strictness settings in mypy config file

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,17 +4,11 @@
 python_version = 3.6
 
 ; Strictness settings
-; disallow_any_unimported = True
-; disallow_any_expr = True
-; disallow_any_decorated = True
-; disallow_any_explicit = True
-disallow_any_generics = True
-; disallow_subclassing_any = True
+disallow_any_unimported = True
+disallow_subclassing_any = True
 
-; disallow_untyped_calls = True
-; disallow_untyped_defs = True
-; disallow_incomplete_defs = True
-; disallow_untyped_decorators = True
+disallow_untyped_calls = True
+disallow_untyped_decorators = True
 
 no_implicit_optional = True
 no_strict_optional = False
@@ -28,16 +22,10 @@ warn_unreachable = True
 allow_untyped_globals = False
 strict_equality = True
 
-[mypy-aiida_optimize.engines._result_mapping]
-; Stricter rules for _result_mapping module
-disallow_any_unimported = True
-disallow_any_decorated = True
-disallow_subclassing_any = True
-
-disallow_untyped_calls = True
-disallow_untyped_defs = True
-disallow_incomplete_defs = True
-disallow_untyped_decorators = True
+[mypy-aiida_mock_codes.*]
 
 [mypy-aiida.*]
+ignore_missing_imports = True
+
+[mypy-pytest.*]
 ignore_missing_imports = True
