Refactor the package to have separate submodules
Since we want to include the automatic export / import for caching,
the 'mock-code' functionality is moved into a separate submodule.

--- a/mypy.ini
+++ b/mypy.ini
@@ -22,7 +22,7 @@ warn_unreachable = True
 allow_untyped_globals = False
 strict_equality = True
 
-[mypy-aiida_mock_codes.*]
+[mypy-aiida_testing.*]
 
 [mypy-aiida.*]
 ignore_missing_imports = True
