--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
   rev: v0.740
   hooks:
   - id: mypy
-    exclude: '^(doc/)|(examples/)'
+    exclude: '^(docs/)|(examples/)'
 
 - repo: local
   hooks:
@@ -20,7 +20,7 @@ repos:
     entry: prospector
     types: [file, python]
     language: system
-    exclude: '^(doc/)|(examples/)'
+    exclude: '^(docs/)|(examples/)'
 
   - id: version-number
     name: Check version numbers
