faster entry point loading for console script
use fastentrypoints module [1] to load console scripts.
not only is it faster, the alternative route via pkg_resources also
throws exceptions whenever it detects dependency clashes in the python
environment, causing aiida-mock-code to fail.

[1] https://github.com/ninjaaron/fast-entry_points

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
   rev: v0.740
   hooks:
   - id: mypy
-    exclude: '^(docs/)|(examples/)'
+    exclude: '^(docs/)|(examples/)|(utils/fastentrypoints.py)'
 
 - repo: local
   hooks:
@@ -20,7 +20,7 @@ repos:
     entry: prospector
     types: [file, python]
     language: system
-    exclude: '^(docs/)|(examples/)'
+    exclude: '^(docs/)|(examples/)|(utils/fastentrypoints.py)'
 
   - id: version-number
     name: Check version numbers
