Add 'packages = find:' to setup.cfg to fix non-editable installs

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires =
     pytest>=3.6
     pyyaml~=5.1.2
     voluptuous~=0.11.7
+packages = find:
 
 [options.extras_require]
 docs =
