--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,11 @@
 repos:
 
 - repo: git://github.com/pre-commit/mirrors-yapf
-  rev: v0.28.0
+  rev: v0.30.0
   hooks:
   - id: yapf
-    language: system
+    types: [python]
+    args: ['-i']
 
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v0.740
@@ -15,9 +16,9 @@ repos:
 - repo: local
   hooks:
 
-  - id: prospector
-    name: prospector
-    entry: prospector
+  - id: pylint
+    name: pylint
+    entry: pylint
     types: [file, python]
     language: system
     exclude: '^(docs/)|(examples/)|(utils/fastentrypoints.py)'
