--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,11 @@
 [build-system]
 requires = ["setuptools >= 46.4.0", "wheel", "fastentrypoints"]
 build-backend = "setuptools.build_meta"
+
+[tool.pylint.format]
+max-line-length = 120
+
+[tool.pylint.messages_control]
+disable = [
+    "duplicate-code",
+]
