mock-code: add 'ignore_paths' argument (#45)
The `ignore_files` parameter of the mock-code fixture allows ignoring
files only based on their filename, but not based on their path in the
the run directory

This does not cover the use case when a code creates a subfolder
structure and one would like to ignore all files in certain subfolders.

This PR adds a `ignore_paths` option to cover that use case (and
deprecates the `ignore_files` option).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,12 @@ max-line-length = 120
 disable = [
     "duplicate-code",
 ]
+
+[tool.pytest.ini_options]
+
+filterwarnings = [
+    "ignore::DeprecationWarning:frozendict:",
+    "ignore::DeprecationWarning:reentry:",
+    "ignore::DeprecationWarning:babel:",
+    "ignore::DeprecationWarning:sqlalchemy_utils:",
+]
